--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <script src="//at.alicdn.com/t/font_933245_w0zbk9spjbn.js"></script>
+    <script src="//at.alicdn.com/t/font_933245_g6oxpfny4sc.js"></script>
     <title>在线简历</title>
     <style type="text/css">
         .icon {
@@ -20,11 +20,16 @@
 
 <body>
     <div class="out">
-        <div class="aside-left">
+        <div class="header">
+            <h1>前端开发工程师：冉奇</h1>
+            <p>通过自学前端技术，让我知道编程世界原来如此奇妙。接触这个行业我就知道我将需要不停的学习总结，这不是百米赛跑，而是一场马拉松。我相信我可以跑的更远飞得更高！</p>
+        </div>
+
+        <div class="asideLeft">
             <div class="photo">
                 <img src="./img/7.jpg" alt="">
             </div>
-            <p>INFO</p>
+            <div class="p">INFO</div>
             <div class="context">
                 <div class="media">
                     <dt>
@@ -59,15 +64,15 @@
                 <div class="media">
                     <dt>
                         <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-weixin"></use>
+                            <use xlink:href="#icon-jiaoyujingli"></use>
                         </svg> 
                     </dt>
                     <dd>
-                        RQ950208
+                        本 科
                     </dd>
                 </div>
             </div>
-            <p>POWER CHANGE</p>
+            <div class="p">POWER CHANGE</div>
             <div class="skill">
                 <dt>
                     JavaScript/HTML5/CSS3/SVG
@@ -94,7 +99,7 @@
                     <span class="one" style="width: 75%"></span>
                 </dd>
             </div>
-            <p>OTHER</p>
+            <div class="p">OTHER</div>
             <div class="other">
                 <div class="media">
                     <dt>
@@ -115,11 +120,30 @@
                         <dd>
                             <a href="https://ranranqi.github.io/">博客</a>
                         </dd>
-                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="aside-right"></div>
+        <div class="main">
+            <div class="aboutMe">
+                <div class="p">&nbsp;&nbsp;&nbsp;ABOUTME</div>
+                <div class="person">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-me"></use>
+                    </svg>
+                </div>
+                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，并乐此不疲。</p>
+            </div>
+            <div class="profile">
+                <div class="p">&nbsp;&nbsp;&nbsp;PRODUCTION</div>
+                <div class="person">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-project"></use>
+                    </svg>
+                </div>
+            </div>
+
+        </div>
     </div>
 </body>
 
