--- a/index.html
+++ b/index.html
@@ -141,6 +141,32 @@
                         <use xlink:href="#icon-project"></use>
                     </svg>
                 </div>
+                <h4>小小画板</h4>
+                <div class="works">
+                    <div><img src="./img/2.png" alt="#"></div>
+                    <div class="code">
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/canvas-demo-3">https://github.com/ranranqi/canvas-demo-3</a></dd>
+                        <dt>预览链接:</dt>
+                        <dd><a href="https://ranranqi.github.io/canvas-demo-3/index.html">https://ranranqi.github.io/canvas-demo-3/index.html</a></dd>
+                    </div>
+                </div>
+                <div>
+                    111111111
+                </div>
+                <h4>键盘导航</h4>
+                <div class="works">
+                    <div><img src="./img/3.png" alt="#"></div>
+                    <div class="code">
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
+                        <dt>预览链接:</dt>
+                        <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                    </div>
+                </div>
+                <div>
+                    22222222
+                </div>
             </div>
 
         </div>
