--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <script src="//at.alicdn.com/t/font_933245_g6oxpfny4sc.js"></script>
+    <script src="//at.alicdn.com/t/font_933245_rcud6x3blvr.js"></script>
     <title>在线简历</title>
     <style type="text/css">
         .icon {
@@ -64,21 +64,27 @@
                 <div class="media">
                     <dt>
                         <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-jiaoyujingli"></use>
+                            <use xlink:href="#icon-weixin"></use>
                         </svg> 
                     </dt>
                     <dd>
-                        本 科
+                        RQ952820
                     </dd>
                 </div>
             </div>
             <div class="p">POWER CHANGE</div>
             <div class="skill">
                 <dt>
-                    JavaScript/HTML5/CSS3/SVG
+                    HTML5/CSS3动画/SVG
                 </dt>
                 <dd>
                     <span class="one" style="width: 90%"></span>
+                </dd>
+                <dt>
+                    原生JavaScript/jQuery/JSON
+                </dt>
+                <dd>
+                    <span class="one" style="width: 80%"></span>
                 </dd>
                 <dt>
                     Vue/Vuex/Vue-router
@@ -90,14 +96,37 @@
                     ES6/Sass/PostCSS/Babel
                 </dt>
                 <dd>
-                    <span class="one" style="width: 88%"></span>
-                </dd>
-                <dt>
-                    Webpack/Parcel/Npm Script 
-                </dt>
-                <dd>
                     <span class="one" style="width: 75%"></span>
                 </dd>
+                <dt>
+                    Webpack/Parcel/ 
+                </dt>
+                <dd>
+                    <span class="one" style="width: 70%"></span>
+                </dd>
+            </div>
+            <div class="p">EDUCATION</div>
+            <div class="other">
+                <div class="media">
+                    <dt>
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-jiaoyujingli"></use>
+                        </svg>
+                    </dt>
+                    <dd>
+                        本科
+                    </dd>
+                </div>
+                <div class="media">
+                        <dt>
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-university"></use>
+                            </svg>
+                        </dt>
+                        <dd>
+                            西安交通大学城市学院
+                        </dd>
+                </div>
             </div>
             <div class="p">OTHER</div>
             <div class="other">
@@ -121,7 +150,18 @@
                             <a href="https://ranranqi.github.io/">博客</a>
                         </dd>
                 </div>
+                <div class="media">
+                    <dt>
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-jianshu1"></use>
+                        </svg>
+                    </dt>
+                    <dd>
+                        <a href="https://ranranqi.github.io/">简书</a>
+                    </dd>
+                </div>
             </div>
+            <div class="length" style="height: 72px"></div>
         </div>
 
         <div class="main">
@@ -132,8 +172,9 @@
                         <use xlink:href="#icon-me"></use>
                     </svg>
                 </div>
-                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，并乐此不疲。</p>
+                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，也乐此不疲。</p>
             </div>
+
             <div class="profile">
                 <div class="p">&nbsp;&nbsp;&nbsp;PRODUCTION</div>
                 <div class="person">
@@ -152,7 +193,7 @@
                     </div>
                 </div>
                 <div>
-                    111111111
+                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
                 </div>
                 <h4>键盘导航</h4>
                 <div class="works">
@@ -165,10 +206,45 @@
                     </div>
                 </div>
                 <div>
-                    22222222
+                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                </div>
+                <h4>键盘导航</h4>
+                <div class="works">
+                    <div><img src="./img/3.png" alt="#"></div>
+                    <div class="code">
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
+                        <dt>预览链接:</dt>
+                        <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                    </div>
+                </div>
+                <div>
+                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                </div>
+                <h4>键盘导航</h4>
+                <div class="works">
+                    <div><img src="./img/3.png" alt="#"></div>
+                    <div class="code">
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
+                        <dt>预览链接:</dt>
+                        <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                    </div>
+                </div>
+                <div>
+                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
                 </div>
             </div>
 
+            <div class="experience">
+                <div class="p">&nbsp;&nbsp;&nbsp;EXPERIENCE</div>
+                <div class="person">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-experience"></use>
+                    </svg>
+                </div>
+                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，也乐此不疲。</p>
+            </div>
         </div>
     </div>
 </body>
