--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="out">
         <div class="header">
-            <h1>前端开发工程师：冉奇</h1>
+            <h1>应聘前端开发岗位者--冉奇</h1>
             <p>通过自学前端技术，让我知道编程世界原来如此奇妙。接触这个行业我就知道我将需要不停的学习总结，这不是百米赛跑，而是一场马拉松。我相信我可以跑的更远飞得更高！</p>
         </div>
 
@@ -161,7 +161,7 @@
                     </dd>
                 </div>
             </div>
-            <div class="length" style="height: 72px"></div>
+            <div class="length" style="height: 75px"></div>
         </div>
 
         <div class="main">
@@ -172,7 +172,7 @@
                         <use xlink:href="#icon-me"></use>
                     </svg>
                 </div>
-                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，也乐此不疲。</p>
+                <p>我叫冉奇，今年24岁，来自陕西汉中。2017年于西安交通大学城市学院机械工程系本科毕业。后从事一年专业工作，因喜欢计算机编程后离职自学前端技术，希望可以成为一名前端开发工作者。</p>
             </div>
 
             <div class="profile">
@@ -243,7 +243,15 @@
                         <use xlink:href="#icon-experience"></use>
                     </svg>
                 </div>
-                <p>自2017年于西安交通大学城市学院毕业，从事一年本专业机械工作，因个人原因不太热爱机械行业，后思虑再三决定辞职。因向往IT行业，后在家通过自己学习前端约半年。在学习过程中对编程开发网页有着浓厚的兴趣，也乐此不疲。</p>
+                <div class="job">
+                    <pre>
+    2017.7 ~ 2018.8
+            在浙江嘉兴从事模具设计行业。
+                
+    2017.8 ~ NOW
+            自学前端。
+                    </pre>
+                </div>
             </div>
         </div>
     </div>
