--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="asideLeft">
             <div class="photo">
-                <img src="./img/7.jpg" alt="">
+                <img src="./img/12.jpg" alt="">
             </div>
             <div class="p">INFO</div>
             <div class="context">
@@ -72,7 +72,7 @@
                     </dd>
                 </div>
             </div>
-            <div class="p">POWER CHANGE</div>
+            <div class="p">SKILL</div>
             <div class="skill">
                 <dt>
                     HTML5/CSS3动画/SVG
@@ -87,7 +87,7 @@
                     <span class="one" style="width: 80%"></span>
                 </dd>
                 <dt>
-                    Vue/Vuex/Vue-router
+                    Vue/Vue-router/Vuex
                 </dt>
                 <dd>
                     <span class="one" style="width: 80%"></span>
@@ -102,7 +102,7 @@
                     Webpack/Parcel/ 
                 </dt>
                 <dd>
-                    <span class="one" style="width: 70%"></span>
+                    <span class="one" style="width: 50%"></span>
                 </dd>
             </div>
             <div class="p">EDUCATION</div>
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。由我自己开发。
                 </div>
                 <h4>键盘导航</h4>
                 <div class="works">
@@ -208,18 +208,18 @@
                 <div>
                     描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
                 </div>
-                <h4>键盘导航</h4>
+                <h4>仿CNode社区</h4>
                 <div class="works">
-                    <div><img src="./img/3.png" alt="#"></div>
+                    <div><img src="./img/cnode.jpg" alt="#"></div>
                     <div class="code">
                         <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
+                        <dd><a href="https://github.com/ranranqi/CNode">https://github.com/ranranqi/CNode</a></dd>
                         <dt>预览链接:</dt>
-                        <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                        <dd><a href="https://ranranqi.github.io/CNode/dist/index.html">https://ranranqi.github.io/CNode/dist/index.html</a></dd>
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                    描述：该项目用vue.js实现，通过vue-router实现各组件页面之间的跳转。通过CNode相关API使用axios拿到各个数据，父子组件之间进行数据传递，实现该页面。
                 </div>
                 <h4>键盘导航</h4>
                 <div class="works">
