--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="out">
         <div class="header">
             <h1>应聘前端开发岗位者--冉奇</h1>
-            <p>通过自学前端技术，让我知道编程世界原来如此奇妙。接触这个行业我就知道我将需要不停的学习总结，这不是百米赛跑，而是一场马拉松。我相信我可以跑的更远飞得更高！</p>
+            <p>通过自学前端技术，让我知道编程世界原来如此奇妙。都说兴趣决定未来，那么前端即是我的兴趣。路上有良友便是捷径，请带上我吧，一起看更大的世界。</p>
         </div>
 
         <div class="asideLeft">
             <div class="photo">
-                <img src="./img/12.jpg" alt="">
+                <img src="./img/wo.png" alt="">
             </div>
             <div class="p">INFO</div>
             <div class="context">
@@ -48,7 +48,7 @@
                         </svg> 
                     </dt>
                     <dd>
-                        18829070256
+                        188-2907-0256
                     </dd>
                 </div>
                 <div class="media">
@@ -197,7 +197,7 @@
                 </div>
                 <h4>键盘导航</h4>
                 <div class="works">
-                    <div><img src="./img/3.png" alt="#"></div>
+                    <div><img src="./img/nav.png" alt="#"></div>
                     <div class="code">
                         <dt>源码链接:</dt>
                         <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
@@ -206,7 +206,7 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                    描述：该项目使用原生JS和CSS实现，使用了DOM API实现了把hash表里的值渲染到页面上，在使用CSS调整成键盘的样式。通过监听键盘事件onkeypress得到按下键盘上的键跳转到键对应的网站。
                 </div>
                 <h4>仿CNode社区</h4>
                 <div class="works">
