--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@
                     HTML5/CSS3动画/SVG
                 </dt>
                 <dd>
-                    <span class="one" style="width: 90%"></span>
+                    <span class="one" style="width: 80%"></span>
                 </dd>
                 <dt>
                     原生JavaScript/jQuery/JSON
                 </dt>
                 <dd>
-                    <span class="one" style="width: 80%"></span>
+                    <span class="one" style="width: 70%"></span>
                 </dd>
                 <dt>
-                    Vue/Vue-router/Vuex
-                </dt>
-                <dd>
-                    <span class="one" style="width: 80%"></span>
-                </dd>
-                <dt>
-                    ES6/Sass/PostCSS/Babel
+                    Vue/Vue-router/Vue-cli/Vuex
                 </dt>
                 <dd>
                     <span class="one" style="width: 75%"></span>
                 </dd>
                 <dt>
-                    Webpack/Parcel/ 
+                    ES6/Sass/PostCSS/Babel
                 </dt>
                 <dd>
-                    <span class="one" style="width: 50%"></span>
+                    <span class="one" style="width: 65%"></span>
+                </dd>
+                <dt>
+                    Webpack/Parcel/MV*
+                </dt>
+                <dd>
+                    <span class="one" style="width: 60%"></span>
                 </dd>
             </div>
             <div class="p">EDUCATION</div>
@@ -157,7 +157,7 @@
                         </svg>
                     </dt>
                     <dd>
-                        <a href="https://ranranqi.github.io/">简书</a>
+                        <a href="https://www.jianshu.com/u/bfc540a467d9">简书</a>
                     </dd>
                 </div>
             </div>
@@ -219,16 +219,16 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目用vue.js实现，通过vue-router实现各组件页面之间的跳转。通过CNode相关API使用axios拿到各个数据，父子组件之间进行数据传递，实现该页面。
+                    描述：该项目用Vue.js实现，项目模块组件：Header模块、PostList模块、Article模块、Slider侧边栏模块、UserInfo用户个人中心模块、Pagination分页组件。通过vue-router路由跳转实现各个组件页面之间的跳转。通过CNode相关API使用axios拿到各个数据，父子组件之间进行数据传递，实现该页面。
                 </div>
-                <h4>键盘导航</h4>
+                <h4>画一只皮卡丘</h4>
                 <div class="works">
-                    <div><img src="./img/3.png" alt="#"></div>
+                    <div><img src="./img/4.png" alt="#"></div>
                     <div class="code">
                         <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
+                        <dd><a href="https://github.com/ranranqi/pikaqiu-demo">https://github.com/ranranqi/pikaqiu-demo</a></dd>
                         <dt>预览链接:</dt>
-                        <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                        <dd><a href="https://ranranqi.github.io/pikaqiu-demo/index.html">https://ranranqi.github.io/pikaqiu-demo/index.html</a></dd>
                     </div>
                 </div>
                 <div>
@@ -243,14 +243,11 @@
                         <use xlink:href="#icon-experience"></use>
                     </svg>
                 </div>
-                <div class="job">
-                    <pre>
-    2017.7 ~ 2018.8
-            在浙江嘉兴从事模具设计行业。
-                
-    2017.8 ~ NOW
-            自学前端。
-                    </pre>
+                <div class="box">
+                    <p>2017.7 ~ 2018.8</p>
+                    <p>在浙江嘉兴从事模具设计行业。</p>
+                    <p>2017.8 ~ NOW</p>
+                    <p>自学前端。</p>
                 </div>
             </div>
         </div>
