--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。完全由我独立开发。用 XXX 实现了 XXX 功能，用 XXX 实现了 XXX 功能。
+                    描述：该项目使用原生JS和CSS实现，用代码的形式播放出画这个皮卡丘的过程。主要使用了setTimeout()定时器和substring()方法把用CSS画好的皮卡丘以代码的形式在页面上展示出来。使用jQuery实现调速按钮，使用条件判断switch case改变定时器里面的时间实现调速。
                 </div>
             </div>
 
