--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                     Vue/Vue-router/Vue-cli/Vuex
                 </dt>
                 <dd>
-                    <span class="one" style="width: 75%"></span>
+                    <span class="one" style="width: 70%"></span>
                 </dd>
                 <dt>
-                    ES6/Sass/PostCSS/Babel
+                    ES6/Sass/React
                 </dt>
                 <dd>
-                    <span class="one" style="width: 65%"></span>
+                    <span class="one" style="width: 50%"></span>
                 </dd>
                 <dt>
                     Webpack/Parcel/MV*
@@ -137,7 +137,7 @@
                         </svg>
                     </dt>
                     <dd>
-                        <a href="https://github.com/">Github</a>
+                        <a href="https://github.com/ranranqi?tab=repositories">Github</a>
                     </dd>
                 </div>
                 <div class="media">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS和CSS实现，用代码的形式播放出画这个皮卡丘的过程。主要使用了setTimeout()定时器和substring()方法把用CSS画好的皮卡丘以代码的形式在页面上展示出来。使用jQuery实现调速按钮，使用条件判断switch case改变定时器里面的时间实现调速。
+                    描述：该项目使用原生JS和CSS实现，用代码的形式播放出画这个皮卡丘的过程。主要使用了setTimeout()定时器和substring()方法把用CSS画好的皮卡丘以代码的形式在页面上展示出来。使用jQuery实现调速按钮，使用switch语句改变定时器里面的时间实现调速。
                 </div>
             </div>
 
