--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="out">
         <div class="header">
             <h1>应聘前端开发岗位者--冉奇</h1>
-            <p>通过自学前端技术，让我知道编程世界原来如此奇妙。都说兴趣决定未来，那么前端即是我的兴趣。路上有良友便是捷径，请带上我吧，一起看更大的世界。</p>
+        <p>通过自学前端技术，让我知道编程世界原来如此奇妙，对此产生了很大的兴趣。都说兴趣决定未来，技术成就梦想。我的梦想就是成为一名前端开发工作者。Please take me. thanks! </p>
         </div>
 
         <div class="asideLeft">
