--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <body>
     <div class="out">
         <div class="header">
-            <h1>应聘前端开发岗位者--冉奇</h1>
+            <h1>应聘前端开发岗位 -- 冉奇</h1>
         <p>通过自学前端技术，让我知道编程世界原来如此奇妙，对此产生了很大的兴趣。都说兴趣决定未来，技术成就梦想。我的梦想就是成为一名前端开发工作者。Please take me. thanks! </p>
         </div>
 
         <div class="asideLeft">
             <div class="photo">
-                <img src="./img/wo.png" alt="">
+                <img src="./img/ph.jpg" alt="">
             </div>
             <div class="p">INFO</div>
             <div class="context">
