--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                 <div class="works">
                     <div><img src="./img/2.png" alt="#"></div>
                     <div class="code">
-                        <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/canvas-demo-3">https://github.com/ranranqi/canvas-demo-3</a></dd>
                         <dt>预览链接:</dt>
                         <dd><a href="https://ranranqi.github.io/canvas-demo-3/index.html">https://ranranqi.github.io/canvas-demo-3/index.html</a></dd>
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/canvas-demo-3">https://github.com/ranranqi/canvas-demo-3</a></dd>
                     </div>
                 </div>
                 <div>
@@ -199,10 +199,10 @@
                 <div class="works">
                     <div><img src="./img/nav.png" alt="#"></div>
                     <div class="code">
-                        <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/nav-demo/commits/master">https://github.com/ranranqi/nav-demo/commits/master</a></dd>
                         <dt>预览链接:</dt>
                         <dd><a href="https://ranranqi.github.io/nav-demo/index.html">https://ranranqi.github.io/nav-demo/index.html</a></dd>
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/nav-demo">https://github.com/ranranqi/nav-demo</a></dd>
                     </div>
                 </div>
                 <div>
@@ -212,10 +212,10 @@
                 <div class="works">
                     <div><img src="./img/cnode.jpg" alt="#"></div>
                     <div class="code">
-                        <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/CNode">https://github.com/ranranqi/CNode</a></dd>
                         <dt>预览链接:</dt>
                         <dd><a href="https://ranranqi.github.io/CNode/dist/index.html">https://ranranqi.github.io/CNode/dist/index.html</a></dd>
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/CNode">https://github.com/ranranqi/CNode</a></dd>
                     </div>
                 </div>
                 <div>
@@ -225,10 +225,10 @@
                 <div class="works">
                     <div><img src="./img/4.png" alt="#"></div>
                     <div class="code">
-                        <dt>源码链接:</dt>
-                        <dd><a href="https://github.com/ranranqi/pikaqiu-demo">https://github.com/ranranqi/pikaqiu-demo</a></dd>
                         <dt>预览链接:</dt>
                         <dd><a href="https://ranranqi.github.io/pikaqiu-demo/index.html">https://ranranqi.github.io/pikaqiu-demo/index.html</a></dd>
+                        <dt>源码链接:</dt>
+                        <dd><a href="https://github.com/ranranqi/pikaqiu-demo">https://github.com/ranranqi/pikaqiu-demo</a></dd>
                     </div>
                 </div>
                 <div>
