--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div>
-                    描述：该项目使用原生JS实现，主要调用 Canvas API，实现了划线、调色、橡皮擦、保存等功能。由我自己开发。
+                    描述：该项目使用 HTML5新增的元素canvas和原生JS实现，主要调用 Canvas API，实现了画线、调色、橡皮擦、清屏、保存等功能。由我自己开发。
                 </div>
                 <h4>键盘导航</h4>
                 <div class="works">
