--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </svg>
                     </dt>
                     <dd>
-                        ranqi1995@outlook.com
+                        1137625794@qq.com
                     </dd>
                 </div>
                 <div class="media">
@@ -182,7 +182,7 @@
                         <use xlink:href="#icon-project"></use>
                     </svg>
                 </div>
-                <h4>小小画板</h4>
+                <h4>1、小小画板</h4>
                 <div class="works">
                     <div><img src="./img/2.png" alt="#"></div>
                     <div class="code">
@@ -195,7 +195,7 @@
                 <div>
                     描述：该项目使用 HTML5新增的元素canvas和原生JS实现，主要调用 Canvas API，实现了画线、调色、橡皮擦、清屏、保存等功能。由我自己开发。
                 </div>
-                <h4>键盘导航</h4>
+                <h4>2、键盘导航</h4>
                 <div class="works">
                     <div><img src="./img/nav.png" alt="#"></div>
                     <div class="code">
@@ -208,7 +208,7 @@
                 <div>
                     描述：该项目使用原生JS和CSS实现，使用了DOM API实现了把hash表里的值渲染到页面上，在使用CSS调整成键盘的样式。通过监听键盘事件onkeypress得到按下键盘上的键跳转到键对应的网站。
                 </div>
-                <h4>仿CNode社区</h4>
+                <h4>3、仿CNode社区</h4>
                 <div class="works">
                     <div><img src="./img/cnode.jpg" alt="#"></div>
                     <div class="code">
@@ -221,7 +221,7 @@
                 <div>
                     描述：该项目用Vue.js实现，项目模块组件：Header模块、PostList模块、Article模块、Slider侧边栏模块、UserInfo用户个人中心模块、Pagination分页组件。通过vue-router路由跳转实现各个组件页面之间的跳转。通过CNode相关API使用axios拿到各个数据，父子组件之间进行数据传递，实现该页面。
                 </div>
-                <h4>画一只皮卡丘</h4>
+                <h4>4、画一只皮卡丘</h4>
                 <div class="works">
                     <div><img src="./img/4.png" alt="#"></div>
                     <div class="code">
