--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <span class="one" style="width: 50%"></span>
                 </dd>
                 <dt>
-                    Webpack/Parcel/MV*
+                    Webpack/Parcel/Git
                 </dt>
                 <dd>
                     <span class="one" style="width: 60%"></span>
